form + adjusted nav elements margin on mobile + fixed btn

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -21,8 +21,6 @@ button:focus, {
 	border: none;
 	outline: none;
 	cursor: pointer;
-	background-color: transparent;
-	color: inherit;
 }
 
 ol, ul {
@@ -64,6 +62,7 @@ html {
 body {
 	font-family: HelveticaNeue;
 	font-size: 1.2rem;
+	line-height: 1.2;
 	color: rgb(62, 62, 73);
 }
 
@@ -98,13 +97,18 @@ h3 {
 	margin-bottom: 0.75rem;
 }
 
-.btn, .btn:hover {
+.btn {
+	font-size: 0.9rem;
+  font-weight: 500;
 	padding: 0.75rem 1rem;
 	color: white;
 	text-align: center;
 	vertical-align: middle;
 	border-radius: 10px;
 	background-color: rgb(55, 66, 250);
+	&:active {
+		background-color: #030CAB;
+	}
 }
 
 body > header,
@@ -126,6 +130,9 @@ body > footer {
 			li {
 				&:not(:last-child) {
 					margin-right: 3rem;
+					@media (max-width: 1200px) {
+						margin-right: 1.5rem;
+					}
 				}
 			}
 		}
@@ -136,15 +143,11 @@ body > footer {
 	nav {
 		padding-top: 1rem;
 		box-shadow: 0 1px 6px 0 rgba(207, 207, 207, 0.5);
-		@media (max-width: 1200px) {
-			.nav {
-				order: 1;
-			}
-		}
 		.row {
 			> * {
 				//padding-top: 1rem;
-				padding-bottom: 1rem;
+				//padding-bottom: 1rem;
+				margin-bottom: 1rem;
 				margin-left: 15px;
 				margin-right: 15px;
 			}
@@ -157,6 +160,9 @@ body > footer {
 		}
 	}
 	.nav {
+		@media (max-width: 1200px) {
+			order: 1;
+		}
 		align-items: center;
 		flex-wrap: wrap;
 	}
@@ -188,7 +194,7 @@ body > header {
 	nav {
 		padding-top: 1.25rem;
 		background-color: #f7faff;
-		li,
+		.nav,
 		.city_select {
 			// padding-top: 1.25rem;
 			// padding-bottom: 1.25rem;
@@ -222,8 +228,9 @@ body > header {
 			}
 			.select	{
 				position: absolute;
-				//z-index: 1;
-				display: none;
+				z-index: 1;
+				background-color: #fff;
+				//display: none;
 				top: 100%;
 				width: 243px;
 				border: 1px solid #dfe3e9;
@@ -266,9 +273,9 @@ body > header {
 		.row {
 			padding-top: 2rem;
 			> * {
-			 // padding-top: 2rem;
-			 // padding-bottom: 2rem;
-			 margin-bottom: 2rem;
+				// padding-top: 2rem;
+				// padding-bottom: 2rem;
+				margin-bottom: 2rem;
 			}
 			.col-xl-7 {
 				display: flex;
@@ -342,7 +349,7 @@ section {
 	ul {
 		margin-bottom: 2rem;
 		li {
-		//	font-size:
+			//	font-size:
 		}
 	}
 }
@@ -387,5 +394,80 @@ img.mask {
 }
 
 .popup {
-	display: none;
+	.f;
+	justify-content: center;
+	z-index: 1;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top:0;
+	display: none!important;
+	
+	form {
+		position: relative;
+		.f;
+		align-items: center;
+		width: 100%;
+		max-width: 730px;
+		padding: 2rem 1rem;
+		background-color: white;
+		border-radius: 20px;
+		box-shadow: 0 2px 7px 0 rgba(196, 196, 196, 0.5);
+		h2 {
+			font-size: 1.2rem;
+			font-weight: bold;
+			margin-bottom: 20px;
+		}
+		label {
+			.f;
+			margin-bottom: 10px;
+			span {
+				font-size: 14px;
+				font-weight: bold;
+				color: rgb(127, 143, 164);
+			}
+		}
+		label,
+		button {
+			width: 100%;
+			max-width: 350px;
+		}
+		input {
+			padding: 15px;
+			font-size: 16px;
+			border: 1px solid #dfe3e9;
+			border-radius: 4px;
+				&:focus {
+				border-color: #2ea2f8;
+			}
+		}
+		.close {
+			position: absolute;
+			right: 25px;
+			top: 25px;
+			width: 15px;
+			height: 15px;
+			opacity: 0.5;
+			&:hover {
+				opacity: 1;
+			}
+			&:before,
+			&:after {
+				position: absolute;
+				
+				content: ' ';
+				height: 2px;
+				width: 15px;
+				background-color: #333;
+			}
+			&:before {
+				left: 50%;
+				transform: translate(-50%, 350%) rotate(45deg);
+			}
+			&:after {
+				right: 50%;
+				transform: translate(50%, 350%) rotate(-45deg);
+			}
+		}
+	}
 }
